--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+API_KEY=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
